# tomography-visualization

./: .gitignore  README.md  dsCalculation.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  vite.config.js
src/nc2gltf/: __init__.py  __main__.py  cli.py  convert.py
src/ncexport/: __init__.py  __main__.py  cli.py  convert.py  radiance.py
src/viewer/: index.html  main.js  main_clean.js  main_multi.js  multiangle.html  sky.js  style.css  testearth.html  testearth.js  volume_node_test.html  webgl_volume_cloud.html
src/viewer/shaders/atm/: atmFragment.glsl
src/viewer/shaders/clouds/: cloudFragment.glsl  cloudVertex.glsl
src/viewer/shaders/ocean/: oceanFragment.glsl  oceanVertex.glsl
src/viewer/shaders/sky/: skyFragment.glsl  skyVertex.glsl
static/: ARM_28800s_QC.glb  ARM_28800s_QC.gltf  ARM_28800s_QC.nrrd  ARM_28800s_QC_19m.nrrd  RICO_40m_80kmx80km_QC.gltf  RICO_40m_80kmx80km_QC.nrrd  qwantani_puresky_4k.avif  starmap_2020_4k.avif  starmap_2020_8k.avif
typings/: netCDF4.pyi
